--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
     <header>
-        <h1>Harmish Patel</h1>
+        <h1>Jensi Saradhara</h1>
         <p>Web Developer | Designer | Programmer</p>
     </header>
 
@@ -91,7 +91,7 @@
 
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Harmish, a passionate web developer. I love creating clean and responsive websites. I enjoy learning new technologies and turning ideas into reality through code.</p>
+            <p>Hello! I'm Jensi, a passionate web developer. I love creating clean and responsive websites. I enjoy learning new technologies and turning ideas into reality through code.</p>
         </section>
 
         <section id="projects" class="projects">
@@ -110,7 +110,7 @@
 
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:harmish@example.com">harmish@example.com</a></p>
+            <p>Email: <a href="mailto:xyx@example.com">xyz@example.com</a></p>
             <p>Phone: +91-XXXXXXXXXX</p>
             <p>Follow me on:
                 <a href="#">LinkedIn</a> |
@@ -122,7 +122,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Harmish Patel. All rights reserved.</p>
+        <p>&copy; 2025 Jensi Saradhara. All rights reserved.</p>
     </footer>
 
 </body>
