--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Jensi, a passionate web developer. I love creating clean and responsive websites. I enjoy learning new technologies and turning ideas into reality through code.</p>
+            <p>Hello! I'm Jensi Saradhara, a passionate web developer. I love creating clean and responsive websites. I enjoy learning new technologies and turning ideas into reality through code.</p>
         </section>
 
         <section id="projects" class="projects">
